[gd_scene load_steps=17 format=3 uid="uid://6yuk1qnvfge0"]

[ext_resource type="Theme" uid="uid://bgr3x6jwhynme" path="res://themes/dark_theme.tres" id="1_7tyyd"]
[ext_resource type="Script" uid="uid://hatdcu6h5jfl" path="res://main.gd" id="1_ip5id"]
[ext_resource type="PackedScene" uid="uid://cuf8vatop611e" path="res://file manager/file_manager.tscn" id="2_abvjp"]
[ext_resource type="PackedScene" uid="uid://coo8e5vjcprxg" path="res://learning/learning.tscn" id="3_ktrdd"]
[ext_resource type="Texture2D" uid="uid://syym5i27ajxj" path="res://assets/images/save_icon.png" id="5_0n1y7"]
[ext_resource type="Texture2D" uid="uid://daxxcyqsadxn0" path="res://assets/images/switch.png" id="5_c45ke"]

[sub_resource type="InputEventKey" id="InputEventKey_272bh"]
device = -1
ctrl_pressed = true
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_5vw27"]
events = [SubResource("InputEventKey_272bh")]

[sub_resource type="InputEventKey" id="InputEventKey_7mycd"]
device = -1
ctrl_pressed = true
keycode = 78
unicode = 110

[sub_resource type="Shortcut" id="Shortcut_272bh"]
events = [SubResource("InputEventKey_7mycd")]

[sub_resource type="InputEventKey" id="InputEventKey_5vw27"]
device = -1
ctrl_pressed = true
keycode = 79
unicode = 111

[sub_resource type="Shortcut" id="Shortcut_kek77"]
events = [SubResource("InputEventKey_5vw27")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7mycd"]
content_margin_left = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.2, 0.741176, 0.470588, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="InputEventKey" id="InputEventKey_4c57u"]
device = -1
ctrl_pressed = true
keycode = 87
unicode = 119

[sub_resource type="Shortcut" id="Shortcut_efxa6"]
events = [SubResource("InputEventKey_4c57u")]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7tyyd")
script = ExtResource("1_ip5id")

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="FileManager" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_abvjp")]
layout_mode = 2

[node name="Learning" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("file_manager") instance=ExtResource("3_ktrdd")]
visible = false
layout_mode = 2
file_manager = NodePath("../FileManager")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.0

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
shortcut = SubResource("Shortcut_5vw27")
text = "Save"
icon = ExtResource("5_0n1y7")

[node name="NewFileButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
shortcut = SubResource("Shortcut_272bh")
text = "New"

[node name="OpenFileButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
shortcut = SubResource("Shortcut_kek77")
text = "Open"

[node name="StatusText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_7mycd")
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="SwitchModeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_7mycd")
shortcut = SubResource("Shortcut_efxa6")
icon = ExtResource("5_c45ke")

[connection signal="timeout" from="SaveTimer" to="." method="_on_save_timer_timeout"]
[connection signal="files_changed" from="MarginContainer/VBoxContainer/FileManager" to="." method="_on_file_manager_files_changed"]
[connection signal="files_changed" from="MarginContainer/VBoxContainer/FileManager" to="MarginContainer/VBoxContainer/Learning" method="_on_file_manager_files_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NewFileButton" to="." method="_on_new_file_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OpenFileButton" to="." method="_on_open_file_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SwitchModeButton" to="." method="_on_switch_mode_button_pressed"]
